--- a/dotnetcore-sample/Views/Home/Index.cshtml
+++ b/dotnetcore-sample/Views/Home/Index.cshtml
@@ -75,7 +75,7 @@
         </ul>
     </div>
     <div class="col-md-3">
-        <h2>How to</h2>
+        <h2>How to ( Guide )</h2>
         <ul>
             <li><a href="https://go.microsoft.com/fwlink/?LinkID=398600">Add a Controller and View</a></li>
             <li><a href="https://go.microsoft.com/fwlink/?LinkId=699315">Manage User Secrets using Secret Manager.</a></li>
@@ -86,7 +86,7 @@
         </ul>
     </div>
     <div class="col-md-3">
-        <h2>Overview</h2>
+        <h2>Overview (Here)</h2>
         <ul>
             <li><a href="https://go.microsoft.com/fwlink/?LinkId=518008">Conceptual overview of what is ASP.NET Core</a></li>
             <li><a href="https://go.microsoft.com/fwlink/?LinkId=699320">Fundamentals of ASP.NET Core such as Startup and middleware.</a></li>
